# mantid

./: CMakeLists.txt
qt/widgets/mplcpp/: CMakeLists.txt
qt/widgets/mplcpp/inc/MantidQtWidgets/MplCpp/: MplFigureCanvas.h  MplPlotWidget.h  PythonErrors.h  PythonObject.h  WrapPython.h
qt/widgets/mplcpp/src/: MplFigureCanvas.cpp  MplPlotWidget.cpp  Numpy.cpp  PythonErrors.cpp  PythonObject.cpp
qt/widgets/mplcpp/test/: CMakeLists.txt  GlobalInitialization.h  MplFigureCanvasTest.h  MplPlotWidgetTest.h  NDArray1DTest.h
ui/widgets/core/: CMakeLists.txt
ui/widgets/core/inc/MantidUiWidgetsCore/: AlgorithmDialog.h  AlgorithmHintStrategy.h  AlgorithmInputHistory.h  AlgorithmPropertiesWidget.h  AlgorithmRunner.h  AlgorithmSelectorWidget.h  BatchAlgorithmRunner.h  BoolPropertyWidget.h  CatalogHelper.h  CatalogSearch.h  CatalogSelector.h  CheckboxHeader.h  ColorBarWidget.h  ColorBarWidget.ui  DataSelector.h  DataSelector.ui  DiagResults.h  DisplayCurveFit.h  DisplayCurveFit.ui  DllOption.h  DoubleSpinBox.h  ErrorCurve.h  FilePropertyWidget.h  FilenameDialogEditor.h  FindDialog.h  FindReplaceDialog.h  FitOptionsBrowser.h  FitPropertyBrowser.h  FlowLayout.h  FormulaDialogEditor.h  FunctionBrowser.h  GenericDialog.h  HelpWindow.h  HintingLineEdit.h  HintingLineEditFactory.h  IFunctionBrowser.h  IMuonFitDataModel.h  IMuonFitDataSelector.h  IMuonFitFunctionModel.h  IProjectSaveView.h  (+93 more)
ui/widgets/core/inc/MantidUiWidgetsCore/DataProcessorUI/: DataProcessorAppendGroupCommand.h  DataProcessorAppendRowCommand.h  DataProcessorClearSelectedCommand.h  DataProcessorCollapseGroupsCommand.h  DataProcessorCommandAdapter.h  DataProcessorCommandBase.h  DataProcessorCopySelectedCommand.h  DataProcessorCutSelectedCommand.h  DataProcessorDeleteGroupCommand.h  DataProcessorDeleteRowCommand.h  DataProcessorExpandCommand.h  DataProcessorExpandGroupsCommand.h  DataProcessorExportTableCommand.h  DataProcessorGenerateNotebook.h  DataProcessorGroupRowsCommand.h  DataProcessorImportTableCommand.h  DataProcessorMockObjects.h  DataProcessorNewTableCommand.h  DataProcessorOneLevelTreeManager.h  DataProcessorOpenTableCommand.h  DataProcessorOptionsCommand.h  DataProcessorPasteSelectedCommand.h  DataProcessorPlotGroupCommand.h  DataProcessorPlotRowCommand.h  DataProcessorPostprocessingAlgorithm.h  DataProcessorPreprocessingAlgorithm.h  DataProcessorProcessCommand.h  DataProcessorProcessingAlgorithm.h  DataProcessorProcessingAlgorithmBase.h  DataProcessorSaveTableAsCommand.h  DataProcessorSaveTableCommand.h  DataProcessorWhiteList.h  (+9 more)
ui/widgets/core/resources/: core.qrc
ui/widgets/core/src/: AlgorithmDialog.cpp  AlgorithmInputHistory.cpp  AlgorithmPropertiesWidget.cpp  AlgorithmRunner.cpp  AlgorithmSelectorWidget.cpp  BatchAlgorithmRunner.cpp  BoolPropertyWidget.cpp  CatalogHelper.cpp  CatalogSearch.cpp  CatalogSelector.cpp  CheckboxHeader.cpp  ColorBarWidget.cpp  DataSelector.cpp  DiagResults.cpp  DisplayCurveFit.cpp  DoubleDialogEditor.cpp  DoubleSpinBox.cpp  ErrorCurve.cpp  FileDialogHandler.cpp  FilePropertyWidget.cpp  FilenameDialogEditor.cpp  FindDialog.cpp  FindReplaceDialog.cpp  FitOptionsBrowser.cpp  FitPropertyBrowser.cpp  FlowLayout.cpp  FormulaDialogEditor.cpp  FunctionBrowser.cpp  GenericDialog.cpp  HelpWindow.cpp  HintingLineEdit.cpp  IndirectInstrumentConfig.cpp  InputController.cpp  InstrumentSelector.cpp  InterfaceFactory.cpp  InterfaceManager.cpp  LineEditWithClear.cpp  ListPropertyWidget.cpp  LogValueSelector.cpp  MWDiag.cpp  (+78 more)
ui/widgets/core/src/DataProcessorUI/: DataProcessorGenerateNotebook.cpp  DataProcessorOneLevelTreeManager.cpp  DataProcessorPostprocessingAlgorithm.cpp  DataProcessorPreprocessingAlgorithm.cpp  DataProcessorProcessingAlgorithm.cpp  DataProcessorProcessingAlgorithmBase.cpp  DataProcessorTwoLevelTreeManager.cpp  DataProcessorWhiteList.cpp  GenericDataProcessorPresenter.cpp  ParseKeyValueString.cpp  QDataProcessorOneLevelTreeModel.cpp  QDataProcessorTwoLevelTreeModel.cpp  QDataProcessorWidget.cpp  QtDataProcessorOptionsDialog.cpp
ui/widgets/core/src/InstrumentView/: BinDialog.cpp  CollapsiblePanel.cpp  ColorMapWidget.cpp  CompAssemblyActor.cpp  ComponentActor.cpp  DetXMLFile.cpp  GLActor.cpp  GLActorCollection.cpp  GLActorVisitor.cpp  GLColor.cpp  GLObject.cpp  ICompAssemblyActor.cpp  InstrumentActor.cpp  InstrumentTreeModel.cpp  InstrumentTreeWidget.cpp  InstrumentWidget.cpp  InstrumentWidgetMaskTab.cpp  InstrumentWidgetPickTab.cpp  InstrumentWidgetRenderTab.cpp  InstrumentWidgetTab.cpp  InstrumentWidgetTreeTab.cpp  MantidGLWidget.cpp  MaskBinsData.cpp  ObjCompAssemblyActor.cpp  ObjComponentActor.cpp  OneCurvePlot.cpp  OpenGLError.cpp  PanelsSurface.cpp  PeakMarker2D.cpp  PeakOverlay.cpp  Projection3D.cpp  ProjectionSurface.cpp  RectF.cpp  RectangularDetectorActor.cpp  RotationSurface.cpp  SampleActor.cpp  Shape2D.cpp  Shape2DCollection.cpp  SimpleWidget.cpp  StructuredDetectorActor.cpp  (+6 more)
ui/widgets/core/src/WorkspacePresenter/: ADSAdapter.cpp  QWorkspaceDockView.cpp  WorkspacePresenter.cpp
ui/widgets/core/test/: AlgorithmHintStrategyTest.h  BatchAlgorithmRunnerTest.h  CMakeLists.txt  FileDialogHandlerTest.h  InterfaceManagerTest.h  MantidColorMapTest.h  NonOrthogonalTest.h  PlotAxisTest.h  ProjectSaveMockObjects.h  ProjectSaveModelTest.h  ProjectSavePresenterTest.h  QwtWorkspaceBinDataTest.h  QwtWorkspaceSpectrumDataTest.h  SelectionNotificationServiceTest.h  SignalBlockerTest.h  SignalRangeTest.h  TrackedActionTest.h
ui/widgets/core/test/DataProcessorUI/: DataProcessorCommandsTest.h  DataProcessorGenerateNotebookTest.h  DataProcessorOneLevelTreeManagerTest.h  DataProcessorPostprocessingAlgorithmTest.h  DataProcessorPreprocessingAlgorithmTest.h  DataProcessorProcessingAlgorithmBaseTest.h  DataProcessorProcessingAlgorithmTest.h  DataProcessorTwoLevelTreeManagerTest.h  DataProcessorWhiteListTest.h  GenericDataProcessorPresenterTest.h  ParseKeyValueStringTest.h  QDataProcessorOneLevelTreeModelTest.h  QDataProcessorTwoLevelTreeModelTest.h
ui/widgets/core/test/WorkspacePresenter/: ADSAdapterTest.h  WorkspacePresenterTest.h
ui/widgets/qtpropertybrowser/: CMakeLists.txt
(+61 files in other folders)
